# mlcast-website

./: .gitignore  AGENTS.md  CLAUDE.md  Docs.md  README.md  catalog-data.json  community.html  contributing.html  coverage-map.js  data.html  faq.html  header.js  home.css  home.html  index.html  myst.yml  package-lock.json  pyproject.toml  software.html  software_and_data.html  tailwind-config.js
.github/workflows/: deploy.yml
docs/: collaborate.md  community-and-news.md  faqs.md  get-started.md  home.md  quick-links.md
docs/documentation/: api-reference.md  data.md  evaluation.md  examples.md  model-architecture.md  overview.md  troubleshooting.md  usage.md  validator.md
docs/documentation/datasets/: be_rmi_precipitation.ipynb  dmi_precipitation.ipynb  it_dpc_precipitation.ipynb  radklim_precipitation.ipynb  uk_metoffice_precipitation.ipynb
docs/website/: Architecture.md  Integration.md  UI_UX_Instructions.md
mlcast-website-carbotti/: TODO.md  community.html  contributing.html  data.html  faq.html  home.css  home.html  software.html  software_and_data.html
scripts/: fetch-catalog-stats.py  fetch-gh-issues.sh  fetch-gh-stats.sh
src/: App.tsx
src/components/: GetStarted.tsx  Mission.tsx
