[project]
name = "mlcast-website"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter-book>=2.1.5",
    "mlcast-datasets>=0.3.0",
    "pyyaml>=6.0.3",
    "s3fs>=2026.6.0",
    "svgpathtools>=1.7.2",
    "zarr>=3.2.1",
]
